api update list delete
